Update on Overleaf.

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -352,7 +352,7 @@ deviation are stable during the experiment.
 \section{Acknowledgment}
 Funded by the German Research Foundation (DFG, Deutsche Forschungsgemeinschaft) as part of Germany’s Excellence Strategy – EXC 2050/1 – Project ID 390696704 – Cluster of Excellence “Centre for Tactile Internet with Human-in-the-Loop” (CeTI) of Technische Universität Dresden.
 
-\bibliography{../../MyLibrary}
+\bibliography{MyLibrary}
 
 
 
